--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>React and Webpack4</title>
+    <title>Elastic Search</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
@@ -23,7 +23,6 @@
       crossorigin
       src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"
     ></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <style>
       /* .dropdown.dropdown-lg .dropdown-menu {
         margin-top: -1px;
